[package]
name = "dropper"
version = "0.2.0"
authors = ["michael <mpgarate@gmail.com>"]

[dependencies]
piston_window = "0.132.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.33.0"
piston2d-sprite = "0.68.0"
image = "0.25.1"
piston2d-drag_controller = "0.30.0"
gfx = "0.18.3"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.34.0"
pistoncore-sdl2_window = "0.69.0"
rand = "0.8.5"
shader_version = "0.7.0"
